2002-03-01 00:45
 TableStream:
  - Full test coverage
2002-03-01 00:15
 TableWriter:
  - Full test coverage
 Test10:
  - Used TableWriter to insert tuple
2002-02-28 23:30
 Test13:
  - Created
 Transactor:
  - Full test coverage
2002-02-27 00:00
 Result:
  - Full test coverage
 Test12:
  - Created
2002-02-26 23:00
 Result:
  - Extended test coverage to metadata queries
 Test11:
  - Created
2002-02-24 22:00
 Result:
  - Documented method coverage
 Test10:
  - Disabled trace output
2002-02-24 05:00
 Transaction:
  - Full method coverage by self-test
  - Found recently introduced bug in implicit abort!
2002-02-24 04:00
 TableStream:
  - Documented method coverage
 TableReader:
  - Documented method coverage
 TableWriter:
  - Documented method coverage
 Test10:
  - Created
 Transaction:
  - Documented method coverage
  - Improved test coverage
 Transactor:
  - Documented method coverage
2002-02-24 01:30
 CONCEPT:
  - Removed unneeded old file
 Connection:
  - Full method coverage by self-test
 Cursor:
  - Documented method coverage
 Trigger:
  - Full method coverage by self-test
2002-02-15 01:30
 Docs:
  - More explanation on transaction bracketing
 Transaction:
  - Deferring commits to destruction time was wrong
2002-02-03 20:15
 Result:
  - Added metadata query methods
  - Removed unnecessary friendship with Tuple
2002-02-03 06:00
 Docs:
  - More examples
 Makefile:
  - No longer removes old library.  Same difference.
  - Abstracted away source tarball, source directory name
2002-02-02 18:45
 Docs:
  - More on exceptions, more on executing queries.
 Makefile:
  - Now builds an actual (but static) library
2002-01-26 21:15
 CVS:
  - Imported into CVS
 Makefile:
  - Fixed "std namespace compiler workaround" breako
  - Added "dist" target
2002-01-26 00:30
 All:
  - New #define PGSTD to replace std if needed
 Compiler:
  - New header pg_compiler.h
  - Genericized workaround for missing numeric_limits
  - Disable braindead Microsoft Visual C++ warnings
2002-01-20 14:50